// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExplorerGrid render default 1`] = `

<div>
  <div class="h-full w-full grow px-8 pb-8">
    <gui-empty-results-state>
    </gui-empty-results-state>
  </div>
</div>

`;

exports[`ExplorerGrid renders workspace with edges in 1`] = `

<div>
  <div class="h-full w-full grow px-8 pb-8">
    <gui-selected-item item="[object Object]">
    </gui-selected-item>
  </div>
</div>

`;

exports[`ExplorerGrid with results 1`] = `

<div>
  <div class="h-full w-full grow px-8 pb-8">
    <div class="grid w-full max-w-8xl grid-cols-8 gap-4">
      <div class="col-span-2">
      </div>
      <div class="col-span-4">
        <div class="flex items-center gap-3">
          <gui-grid-header classname="mb-4">
            Results
          </gui-grid-header>
          <gui-badge
            classname="mt-2"
            variant="default"
          >
            2
          </gui-badge>
        </div>
        <div class="flex flex-col gap-6">
          <gui-result-item item="[object Object]">
          </gui-result-item>
          <gui-result-item item="[object Object]">
          </gui-result-item>
        </div>
      </div>
      <div class="col-span-2">
      </div>
    </div>
  </div>
</div>

`;

exports[`ExplorerGrid with stack 1`] = `

<div>
  <div class="h-full w-full grow px-8 pb-8">
    <div class="grid w-full max-w-8xl grid-cols-8 gap-4">
      <div class="col-span-2">
      </div>
      <div class="col-span-4">
        <div class="flex items-center gap-3">
          <gui-grid-header classname="mb-4">
            Results
          </gui-grid-header>
          <gui-badge
            classname="mt-2"
            variant="default"
          >
            2
          </gui-badge>
        </div>
        <div class="flex flex-col gap-6">
          <gui-result-item item="[object Object]">
          </gui-result-item>
          <gui-result-item item="[object Object]">
          </gui-result-item>
        </div>
      </div>
      <div class="col-span-2">
      </div>
    </div>
  </div>
</div>

`;
